# HuggingFaceGuidedTourForMac

./: .gitignore  00-SystemCheck.ipynb  01-ChatBot.ipynb  02-Benchmarks.ipynb  LICENSE  README.md  pyproject.toml  requirements.txt
LegacyGuides/: README_v3.md
NextSteps/: llama.cpp.md
