[project]
name = "huggingfaceguidedtourformac"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.8.1",
    "ipywidgets>=8.1.7",
    "jax==0.4.34",
    "jax-metal>=0.1.1",
    "jupyterlab>=4.4.3",
    "mlx>=0.26.1",
    "tensorflow>=2.19.0",
    "tensorflow-metal>=1.2.0",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
